Changes between 0.1.0 and x.x.x  [xx XXX xxxx]

  *) New function freefare_free_tag() to free individual tags from a MifareTag
     list.
