@@ -67,7 +67,7 @@ The
 .Fn mifare_application_alloc
 function allocates enought sectors to store
 .Vt size
-sectors for the Application Identifier
+bytes for the Application Identifier
 .Vt aid
 and returns the list of allocated sectors.
 .Pp
